--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
   <script>
     // Singleton do cliente para evitar redeclarações e conflitos
     (function initSupabase(){
-      const sdkLoaded = !!window.supabase && typeof window.supabase.createClient === "function";
-      if (!sdkLoaded) {
-        console.error("Supabase SDK não carregado.");
-        return;
-      }
+      const sdkOk = !!window.supabase && typeof window.supabase.createClient === "function";
+      if (!sdkOk) { console.error("Supabase SDK não carregado."); return; }
       if (!window.__sb) {
         window.__sb = window.supabase.createClient(
           "https://pldamguukjeuakrvfbzf.supabase.co",
@@ -42,7 +39,7 @@
 
     /* Sidebar mais larga e com rolamento interno */
     .sidebar {
-      flex:0 0 480px; width:480px; max-width:100%;
+      flex:0 0 500px; width:500px; max-width:100%;
       padding:16px; background:var(--panel); border-right:1px solid var(--border);
       overflow-y:auto; overflow-x:hidden;
     }
@@ -60,26 +57,27 @@
     .btn.blue { background:var(--blue); border-color:var(--blue); color:#0b0b0b; }
     .btn.red { background:var(--red); border-color:var(--red); color:#0b0b0b; }
 
-    /* Chips mais dinâmicos */
+    /* Chips em duas linhas: nome em cima, ID embaixo */
     .chip {
-      display:flex; align-items:center; justify-content:space-between; gap:10px;
-      padding:10px 14px; border-radius:999px; background:#151515; border:1px solid var(--border); margin:6px 0; font-size:13px;
-      transition: transform .12s ease, background .12s ease, border-color .12s ease;
+      display:flex; align-items:flex-start; justify-content:space-between; gap:10px;
+      padding:10px 14px; border-radius:12px; background:#151515; border:1px solid var(--border); margin:6px 0; font-size:13px;
+      transition: transform .12s ease, border-color .12s ease;
     }
     .chip.clickable { cursor:pointer; }
-    .chip:hover { transform:scale(1.02); border-color:#2a2a2a; }
+    .chip:hover { transform:scale(1.01); border-color:#2a2a2a; }
     .chip.selected { background:var(--green); color:#0b0b0b; border-color:var(--green); }
-    .chip .left { display:flex; align-items:center; gap:8px; min-width:0; }
-    .chip .label { font-weight:600; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; max-width:64%; }
-    .chip .sub { color:var(--muted); overflow:hidden; text-overflow:ellipsis; white-space:nowrap; max-width:36%; }
-    .chip .right { display:flex; align-items:center; gap:6px; }
+
+    .chip .left { display:flex; flex-direction:column; align-items:flex-start; gap:2px; min-width:0; }
+    .chip .label { font-weight:600; font-size:14px; white-space:normal; word-break:break-word; }
+    .chip .sub { font-size:12px; color:var(--muted); white-space:normal; word-break:break-word; }
+    .chip .right { display:flex; align-items:center; gap:4px; flex-wrap:wrap; }
 
     .badge { display:inline-block; padding:4px 10px; border-radius:999px; background:#1a1a1a; border:1px solid var(--border); font-size:12px; }
     .badge.Dono { background:var(--gold); color:#0b0b0b; font-weight:700; }
     .badge.Gerente { background:var(--blue); color:#0b0b0b; font-weight:700; }
 
-    /* Botões menores nos chips */
-    .mini-btn { padding:3px 7px; font-size:11px; border-radius:8px; border:1px solid var(--border); background:#1a1a1a; color:var(--text); cursor:pointer; }
+    /* Botões menores */
+    .mini-btn { padding:3px 6px; font-size:11px; border-radius:8px; border:1px solid var(--border); background:#1a1a1a; color:var(--text); cursor:pointer; }
     .mini-btn.orange { background:var(--orange); color:#0b0b0b; border-color:var(--orange); }
     .mini-btn.red { background:var(--red); color:#0b0b0b; border-color:var(--red); }
 
@@ -99,14 +97,14 @@
     .error { color:var(--red); font-size:13px; margin-top:8px; }
     .muted { color:var(--muted); font-size:13px; }
 
-    @media (max-width: 900px) {
+    @media (max-width: 980px) {
       .content { flex-direction:column; }
       .sidebar {
         width:100%;
         flex:0 0 auto;
         border-right:none;
         border-bottom:1px solid var(--border);
-        max-height:40vh;
+        max-height:45vh;
       }
       .main { flex:1 1 auto; }
     }
@@ -120,7 +118,7 @@
       <div id="listaResponsaveis"></div>
       <div class="row" style="margin-top:12px;">
         <div class="col"><input id="novoResponsavelNome" type="text" placeholder="Nome do responsável"></div>
-        <div class="col"><input id="novoResponsavelId" type="text" placeholder="ID (opcional)"></div>
+        <div class="col"><input id="novoResponsavelId" type="text" placeholder="ID (opcional, vincular ao funcionário)"></div>
         <div class="col">
           <select id="novoResponsavelCargo">
             <option value="Dono">Dono</option>
@@ -186,7 +184,7 @@
   </div>
 
   <script>
-    // Bloqueia execução se o cliente não estiver pronto
+    // Proteção básica
     if (!db || typeof db.from !== "function") {
       console.error("Cliente Supabase não inicializado corretamente.");
     }
@@ -397,7 +395,9 @@
       const { error } = await db.from("responsaveis").insert([payload]);
       if(error){ alert("Erro ao salvar responsável: " + error.message); return; }
 
-      novoResponsavelNomeEl.value=""; novoResponsavelIdEl.value=""; novoResponsavelCargoEl.value="Dono";
+      novoResponsavelNomeEl.value="";
+      novoResponsavelIdEl.value="";
+      novoResponsavelCargoEl.value="Dono";
       await carregarResponsaveis();
     }
 
