--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <!-- SDK Supabase (inclua apenas uma vez) -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-    // Singleton do cliente para evitar redeclarações e conflitos
     (function initSupabase(){
       const sdkOk = !!window.supabase && typeof window.supabase.createClient === "function";
       if (!sdkOk) { console.error("Supabase SDK não carregado."); return; }
@@ -19,7 +18,6 @@
         );
       }
     })();
-    // Use 'db' em todo o código (evita colisão com 'supabase')
     const db = window.__sb;
   </script>
 
@@ -29,7 +27,7 @@
       --text:#e9e9e9; --muted:#9a9a9a;
       --green:#2ecc71; --blue:#3b82f6; --orange:#f59e0b; --red:#ef4444; --gold:#ffd700;
     }
-    * { box-sizing: border-box; }
+    * { box-sizing:border-box; }
     body { margin:0; background:var(--bg); color:var(--text); font-family:Arial,sans-serif; }
     h1,h3 { margin:0 0 12px; }
 
@@ -74,12 +72,12 @@
     .badge.Dono { background:var(--gold); color:#0b0b0b; font-weight:700; }
     .badge.Gerente { background:var(--blue); color:#0b0b0b; font-weight:700; }
 
-    /* Botões menores */
+    /* Botões menores nos chips */
     .mini-btn { padding:3px 6px; font-size:11px; border-radius:8px; border:1px solid var(--border); background:#1a1a1a; color:var(--text); cursor:pointer; }
     .mini-btn.orange { background:var(--orange); color:#0b0b0b; border-color:var(--orange); }
     .mini-btn.red { background:var(--red); color:#0b0b0b; border-color:var(--red); }
 
-    table { width:100%; border-collapse:collapse; overflow:hidden; border-radius:12px; table-layout:fixed; }
+    table { width:100%; border-collapse:collapse; border-radius:12px; table-layout:fixed; }
     th,td { padding:10px 12px; border-bottom:1px solid var(--border); text-align:left; font-size:14px; word-wrap:break-word; }
     thead th { background:#141414; color:var(--muted); }
 
@@ -88,11 +86,18 @@
     .reg-item .time { font-weight:600; }
     .reg-item .remove { color:var(--red); cursor:pointer; font-weight:700; }
 
-    /* Barra de rolagem na área de registros */
+    /* Card de registros com altura limitada e rolagem interna */
+    .card.registros {
+      display:flex; flex-direction:column;
+      max-height: 350px;            /* limite visual do card */
+      overflow:hidden;              /* impede o card de estourar */
+    }
+    .card.registros h3 { margin-bottom:10px; }
     #registrosArea {
-      max-height: 280px;
-      overflow-y: auto;
-      padding-right: 6px;
+      flex:1 1 auto;                /* ocupa o espaço disponível do card */
+      overflow-y: auto;             /* rola verticalmente dentro da área */
+      min-height: 140px;            /* garante área útil mínima */
+      padding-right: 6px;           /* espaço para a barra */
     }
 
     .rank { background:#1a1a1a; border:1px solid var(--border); border-radius:10px; padding:10px; margin-top:10px; }
@@ -180,7 +185,7 @@
           </div>
         </div>
 
-        <div class="card">
+        <div class="card registros">
           <h3>Registros do Funcionário Selecionado</h3>
           <div id="registrosArea" class="reg-list"></div>
         </div>
@@ -189,7 +194,6 @@
   </div>
 
   <script>
-    // Proteção básica
     if (!db || typeof db.from !== "function") {
       console.error("Cliente Supabase não inicializado corretamente.");
     }
@@ -247,7 +251,6 @@
         const left=document.createElement("div"); left.className="left";
         const label=document.createElement("span"); label.className="label"; label.textContent=f.nome;
         const sub=document.createElement("span"); sub.className="sub"; sub.textContent=`ID: ${f.id}`;
-
         left.appendChild(label); left.appendChild(sub);
 
         const right=document.createElement("div"); right.className="right";
@@ -509,7 +512,7 @@
       if(!confirm(`Remover ${f.nome} (ID: ${f.id})? Isto apagará seus registros.`)) return;
 
       const { error } = await db.from("funcionarios").delete().eq("id", f.id);
-      if(error){ alert("Erro ao remover funcionário: " + error.message); return; }
+      if(error){ alert("Erro ao remover funcionário: " + err.message); return; }
 
       if(funcionarioSelecionado===idx) funcionarioSelecionado=null;
       else if(typeof funcionarioSelecionado==="number" && funcionarioSelecionado>idx) funcionarioSelecionado-=1;
