--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@
       --green:#2ecc71; --blue:#3b82f6; --orange:#f59e0b; --red:#ef4444; --gold:#ffd700;
     }
     * { box-sizing:border-box; }
-    body { margin:0; background:var(--bg); color:var(--text); font-family:Arial,sans-serif; }
+    html, body {
+      min-height: 100%;
+      height: auto;
+      overflow-y: auto;        /* rolagem na página inteira */
+      margin:0;
+      background:var(--bg);
+      color:var(--text);
+      font-family:Arial,sans-serif;
+    }
     h1,h3 { margin:0 0 12px; }
 
-    .layout { display:flex; flex-direction:column; height:100vh; }
+    .layout { display:flex; flex-direction:column; min-height:100%; }
     .topbar { padding:16px; background:var(--panel); border-bottom:1px solid var(--border); }
-    .content { display:flex; flex:1; min-height:0; overflow:hidden; }
+    .content { display:flex; flex:1; min-height:0; }
 
     /* Sidebar mais larga e com rolamento interno */
     .sidebar {
@@ -51,9 +59,9 @@
     input::placeholder { color:#7a7a7a; }
 
     .btn { padding:10px 14px; border-radius:10px; border:1px solid var(--border); background:#151515; color:var(--text); cursor:pointer; }
-    .btn.primary { background:var(--green); border-color:var(--green); color:#0b0b0b; }
-    .btn.blue { background:var(--blue); border-color:var(--blue); color:#0b0b0b; }
-    .btn.red { background:var(--red); border-color:var(--red); color:#0b0b0b; }
+    .btn.primary { background:var(--green); color:#0b0b0b; }
+    .btn.blue { background:var(--blue); color:#0b0b0b; }
+    .btn.red { background:var(--red); color:#0b0b0b; }
 
     /* Chips em duas linhas: nome em cima, ID embaixo */
     .chip {
@@ -86,18 +94,17 @@
     .reg-item .time { font-weight:600; }
     .reg-item .remove { color:var(--red); cursor:pointer; font-weight:700; }
 
-    /* Card de registros com altura limitada e rolagem interna */
+    /* Card de registros com rolagem interna */
     .card.registros {
       display:flex; flex-direction:column;
-      max-height: 340px;            /* limite visual do card */
-      overflow:hidden;              /* impede o card de estourar */
+      height: 360px;              /* altura fixa do card para forçar rolagem interna */
+      overflow:hidden;
     }
     .card.registros h3 { margin-bottom:10px; }
     #registrosArea {
-      flex:1 1 auto;                /* ocupa o espaço disponível do card */
-      overflow-y: auto;             /* rola verticalmente dentro da área */
-      min-height: 140px;            /* garante área útil mínima */
-      padding-right: 6px;           /* espaço para a barra */
+      flex:1 1 auto;
+      overflow-y:auto;            /* rolagem vertical dentro da área */
+      padding-right:6px;
     }
 
     .rank { background:#1a1a1a; border:1px solid var(--border); border-radius:10px; padding:10px; margin-top:10px; }
@@ -117,6 +124,7 @@
         max-height:45vh;
       }
       .main { flex:1 1 auto; }
+      .card.registros { height: 300px; }
     }
   </style>
 </head>
@@ -512,7 +520,7 @@
       if(!confirm(`Remover ${f.nome} (ID: ${f.id})? Isto apagará seus registros.`)) return;
 
       const { error } = await db.from("funcionarios").delete().eq("id", f.id);
-      if(error){ alert("Erro ao remover funcionário: " + err.message); return; }
+      if(error){ alert("Erro ao remover funcionário: " + error.message); return; }
 
       if(funcionarioSelecionado===idx) funcionarioSelecionado=null;
       else if(typeof funcionarioSelecionado==="number" && funcionarioSelecionado>idx) funcionarioSelecionado-=1;
